// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions should return properly 1`] = `
Object {
  "text": "text",
  "type": "ADD_TODO",
}
`;

exports[`Actions should return properly 2`] = `
Object {
  "id": 123,
  "type": "DELETE_TODO",
}
`;

exports[`Actions should return properly 3`] = `
Object {
  "id": 123,
  "text": "text",
  "type": "EDIT_TODO",
}
`;

exports[`Actions should return properly 4`] = `
Object {
  "completed": true,
  "id": 1,
  "type": "TOGGLE_TODO",
}
`;

exports[`Actions should return properly 5`] = `
Object {
  "type": "COMPLETE_ALL",
}
`;

exports[`Actions should return properly 6`] = `
Object {
  "type": "CLEAR_COMPLETED",
}
`;
